--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  path: ^1.6.4
+  path_provider: ^1.5.0
+
   image_picker: ^0.6.1+4
 
 dev_dependencies:
