Create a simple movie by FFmped on iOS

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,6 +53,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/proguard/coroutines.pro'
+    }
 }
 
 flutter {
@@ -61,7 +65,11 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
     implementation project(":sharedcode")
+
     implementation 'com.arthenica:mobile-ffmpeg-full:4.3.2'
 
     testImplementation 'junit:junit:4.12'
