--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx1536M
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+android.enableR8=true
