--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   path_provider: ^1.5.0
 
   image_picker: ^0.6.1+4
+  video_player: ^0.10.11
+  flutter_image_compress: ^0.6.8
 
 dev_dependencies:
   flutter_test:
