--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
-    ext.kotlin_version = "1.3.72"
-    ext.coroutines_version = "1.3.6"
+    apply from: "dependencies.gradle"
+
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath deps.gradle.android
+        classpath deps.gradle.kotlin
     }
 }
 
