--- a/android/dependencies.gradle
+++ b/android/dependencies.gradle
@@ -1,33 +1,50 @@
 ext.versions = [
-        gradle_android: "3.2.1",
+        gradle_android: "3.6.0",
         kotlin        : "1.3.72",
         coroutines    : "1.3.7",
-        android_sdk: [
-                min: 24,
-                compile: 28,
-                target: 28,
+        serialization : "0.20.0",
+        android_sdk   : [
+                min       : 24,
+                compile   : 28,
+                target    : 28,
                 buildtools: "29.0.2"
         ],
-        ffmpeg: "4.3.2"
+        ffmpeg        : "4.3.2",
+        sqldelight    : "1.3.0"
 ]
 
 ext.deps = [
-        gradle: [
-                android: "com.android.tools.build:gradle:$versions.gradle_android",
-                kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+        gradle    : [
+                android      : "com.android.tools.build:gradle:$versions.gradle_android",
+                kotlin       : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
+                serialization: "org.jetbrains.kotlin:kotlin-serialization:$versions.kotlin",
+                sqldelight   : "com.squareup.sqldelight:gradle-plugin:$versions.sqldelight"
         ],
-        kotlin: [
-                stdlib    : [
+        kotlin    : [
+                stdlib       : [
                         stdlib: "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
                         jdk7  : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin",
                         common: "org.jetbrains.kotlin:kotlin-stdlib-common:$versions.kotlin"
                 ],
-                coroutines: [
-                        core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines",
-                        android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
+                serialization: [
+                        common : "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$versions.serialization",
+                        runtime: "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$versions.serialization",
+                        native : "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$versions.serialization"
+                ],
+                coroutines   : [
+                        core: "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines",
+                        common: "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$versions.coroutines",
+                        android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines",
+                        native: "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$versions.coroutines"
                 ]
         ],
-        tools: [
+        sqldelight: [
+                driver: [
+                        'android': "com.squareup.sqldelight:android-driver:$versions.sqldelight",
+                        'native' : "com.squareup.sqldelight:native-driver:$versions.sqldelight"
+                ],
+        ],
+        tools     : [
                 ffmpeg: "com.arthenica:mobile-ffmpeg-full:$versions.ffmpeg"
         ]
 ]
