--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion versions.android_sdk.compile
     buildToolsVersion versions.android_sdk.buildtools
+    ndkVersion '21.0.6113669'
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
