--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ description: CPMovieMaker
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -22,15 +22,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.3
 
-  provider: ^3.2.0
-  path: ^1.6.4
-  path_provider: ^1.5.0
+  provider: ^5.0.0
+  path: ^1.8.0
+  path_provider: ^2.0.2
 
-  image_picker: ^0.6.1+4
-  video_player: ^0.10.11
-  flutter_image_compress: ^0.6.8
+  image_picker: ^0.8.0+3
+  video_player: ^2.1.6
+  flutter_image_compress: ^1.0.0
 
 dev_dependencies:
   flutter_test:
