--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/
+  fonts:
+    - family: Metropolis
+      fonts:
+        - asset: assets/fonts/metropolis.black.otf
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
