--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cpmoviemaker
-description: CPMovieMaker
+description: SlideMix
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
