--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,20 @@ dependencies:
   # https://pub.dev/packages/floor
   floor: 1.3.0
 
+  # https://pub.dev/packages/image_picker
+  image_picker: 0.8.6
+
   # https://pub.dev/packages/intl
   intl: 0.17.0
 
   # https://pub.dev/packages/logger
   logger: 1.1.0
+
+  # https://pub.dev/packages/path
+  path: 1.8.2
+
+  # https://pub.dev/packages/path_provider
+  path_provider: 2.0.11
 
 dev_dependencies:
   flutter_test:
