--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +49,9 @@ dependencies:
 
   # https://pub.dev/packages/floor
   floor: 1.3.0
+
+  # https://pub.dev/packages/google_fonts
+  google_fonts: 3.0.1
 
   # https://pub.dev/packages/image_picker
   image_picker: 0.8.6
@@ -96,6 +101,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -104,10 +110,4 @@ flutter:
 
   assets:
     - assets/images/
-  fonts:
-    - family: Metropolis
-      fonts:
-        - asset: assets/fonts/metropolis.black.otf
-    - family: Metropolis Bold
-      fonts:
-        - asset: assets/fonts/metropolis.bold.otf
+    - assets/google_fonts/
