--- a/android/.gitignore
+++ b/android/.gitignore
@@ -13,6 +13,7 @@ captures/
 .externalNativeBuild/
 .cxx/
 *.apk
+*.aab
 output.json
 
 # IntelliJ
@@ -25,6 +26,7 @@ render.experimental.xml
 # Keystore files
 *.jks
 *.keystore
+/app/private_key.pepk
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
