--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.2+4
 
 environment:
-  sdk: '>=2.18.1 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,7 +36,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 1.0.3
+  cupertino_icons: 1.0.5
 
   # https://pub.dev/packages/equatable
   equatable: 2.0.5
@@ -45,62 +45,62 @@ dependencies:
   ffmpeg_kit_flutter_full_gpl: 5.1.0
 
   # https://pub.dev/packages/firebase_core
-  firebase_core: 2.3.0
+  firebase_core: 2.12.0
 
   # https://pub.dev/packages/firebase_crashlytics
-  firebase_crashlytics: 3.0.6
+  firebase_crashlytics: 3.3.0
 
   # https://pub.dev/packages/flutter_bloc
-  flutter_bloc: 8.1.1
+  flutter_bloc: 8.1.2
 
   # https://pub.dev/packages/floor
-  floor: 1.3.0
+  floor: 1.4.2
 
   # https://pub.dev/packages/google_fonts
-  google_fonts: 3.0.1
+  google_fonts: 4.0.4
 
   # https://pub.dev/packages/image_picker
-  image_picker: 0.8.6
+  image_picker: 0.8.7+5
 
   # https://pub.dev/packages/intl
-  intl: 0.17.0
+  intl: 0.18.0
 
   # https://pub.dev/packages/logger
-  logger: 1.1.0
+  logger: 1.3.0
 
   # https://pub.dev/packages/path
-  path: 1.8.2
+  path: 1.8.3
 
   # https://pub.dev/packages/path_provider
-  path_provider: 2.0.11
+  path_provider: 2.0.15
+
+  # https://pub.dev/packages/share_plus
+  share_plus: 7.0.0
 
   # https://pub.dev/packages/shared_preferences
-  shared_preferences: 2.0.15
+  shared_preferences: 2.1.1
 
   # https://pub.dev/packages/sqflite
-  sqflite: 2.2.0+3
+  sqflite: 2.2.8+2
 
   # https://pub.dev/packages/timeago
-  timeago: 3.3.0
+  timeago: 3.4.0
 
   # https://pub.dev/packages/video_player
-  video_player: 2.4.7
+  video_player: 2.6.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: 2.0.0
+  flutter_lints: 2.0.1
 
   # https://pub.dev/packages/floor
-  floor_generator: 1.3.0
+  floor_generator: 1.4.2
   # flutter packages pub run build_runner build
-  build_runner: 2.3.2
+  build_runner: 2.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
