--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en</string>
@@ -55,6 +57,8 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Photo access to pick photos to create a movie</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera access to  capture photo to create a movie</string>
+	<string>Camera access to capture photo to create a movie</string>
+	<key>UIStatusBarHidden</key>
+	<false/>
 </dict>
 </plist>
