--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.4+10104
+version: 1.1.5+10105
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -82,6 +82,9 @@ dependencies:
 
   # https://pub.dev/packages/shared_preferences
   shared_preferences: 2.1.1
+
+  # https://pub.dev/packages/sizer
+  sizer: 2.0.15
 
   # https://pub.dev/packages/sqflite
   sqflite: 2.2.8+4
