--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.6+10106
+version: 1.1.7+10107
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -43,6 +43,9 @@ dependencies:
 
   # https://github.com/arthenica/ffmpeg-kit/tree/main/flutter/flutter
   ffmpeg_kit_flutter_full_gpl: 5.1.0
+
+  # https://pub.dev/packages/firebase_analytics
+  firebase_analytics: 10.4.2
 
   # https://pub.dev/packages/firebase_core
   firebase_core: 2.13.1
