--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   flutter_bloc: 8.1.3
 
   # https://pub.dev/packages/flutter_native_splash
-  flutter_native_splash: 2.3.0
+  flutter_native_splash: 2.3.1
 
   # https://pub.dev/packages/floor
   floor: 1.4.2
@@ -66,13 +66,13 @@ dependencies:
   google_fonts: 4.0.4
 
   # https://pub.dev/packages/image_picker
-  image_picker: 0.8.7+5
+  image_picker: 0.8.8
 
   # https://pub.dev/packages/intl
   intl: 0.18.0
 
   # https://pub.dev/packages/logger
-  logger: 1.3.0
+  logger: 1.4.0
 
   # https://pub.dev/packages/path
   path: 1.8.3
@@ -84,7 +84,7 @@ dependencies:
   share_plus: 7.0.2
 
   # https://pub.dev/packages/shared_preferences
-  shared_preferences: 2.1.1
+  shared_preferences: 2.1.2
 
   # https://pub.dev/packages/sizer
   sizer: 2.0.15
@@ -109,7 +109,7 @@ dev_dependencies:
   # https://pub.dev/packages/floor
   floor_generator: 1.4.2
   # flutter packages pub run build_runner build
-  build_runner: 2.4.4
+  build_runner: 2.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
