--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,7 @@ flutter:
   assets:
     - assets/images/
     - assets/google_fonts/
+    - assets/transitions/
 
 flutter_native_splash:
   # This package generates native code to customize Flutter's default white native splash screen
