--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,8 @@
 buildscript {
     ext {
-        kotlin_version = '1.8.21'
-        serialization_version = '1.5.1'
+        kotlin_version = '1.9.0'
+        serialization_version = '1.6.0-RC'
     }
-    ext.kotlin_version = '1.8.21'
     repositories {
         google()
         mavenCentral()
@@ -15,7 +14,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.7'
     }
 }
 
