--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,13 @@ dependencies:
   ffmpeg_kit_flutter_full_gpl: 5.1.0
 
   # https://pub.dev/packages/firebase_analytics
-  firebase_analytics: 10.4.3
+  firebase_analytics: 10.4.4
 
   # https://pub.dev/packages/firebase_core
-  firebase_core: 2.14.0
+  firebase_core: 2.15.0
 
   # https://pub.dev/packages/firebase_crashlytics
-  firebase_crashlytics: 3.3.3
+  firebase_crashlytics: 3.3.4
 
   # https://pub.dev/packages/flutter_bloc
   flutter_bloc: 8.1.3
@@ -66,13 +66,13 @@ dependencies:
   google_fonts: 5.1.0
 
   # https://pub.dev/packages/image_picker
-  image_picker: 1.0.0
+  image_picker: 1.0.1
 
   # https://pub.dev/packages/intl
   intl: 0.18.0
 
   # https://pub.dev/packages/logger
-  logger: 1.4.0
+  logger: 2.0.1
 
   # https://pub.dev/packages/path
   path: 1.8.3
@@ -81,7 +81,7 @@ dependencies:
   path_provider: 2.0.15
 
   # https://pub.dev/packages/share_plus
-  share_plus: 7.0.2
+  share_plus: 7.1.0
 
   # https://pub.dev/packages/shared_preferences
   shared_preferences: 2.2.0
@@ -90,7 +90,7 @@ dependencies:
   sizer: 2.0.15
 
   # https://pub.dev/packages/sqflite
-  sqflite: 2.2.8+4
+  sqflite: 2.3.0
 
   # https://pub.dev/packages/timeago
   timeago: 3.5.0
@@ -104,12 +104,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: 2.0.1
+  flutter_lints: 2.0.2
 
   # https://pub.dev/packages/floor
   floor_generator: 1.4.2
   # flutter packages pub run build_runner build
-  build_runner: 2.4.5
+  build_runner: 2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
