--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.1+20001
+version: 2.0.2+20002
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.4.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,67 +36,67 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 1.0.5
+  cupertino_icons: 1.0.8
 
   # https://pub.dev/packages/equatable
   equatable: 2.0.5
 
   # https://github.com/arthenica/ffmpeg-kit/tree/main/flutter/flutter
-  ffmpeg_kit_flutter_full_gpl: 5.1.0
+  ffmpeg_kit_flutter_full_gpl: 6.0.3
 
   # https://pub.dev/packages/firebase_analytics
-  firebase_analytics: 10.4.4
+  firebase_analytics: 11.2.0
 
   # https://pub.dev/packages/firebase_core
-  firebase_core: 2.15.0
+  firebase_core: 3.2.0
 
   # https://pub.dev/packages/firebase_crashlytics
-  firebase_crashlytics: 3.3.4
+  firebase_crashlytics: 4.0.3
 
   # https://pub.dev/packages/flutter_bloc
-  flutter_bloc: 8.1.3
+  flutter_bloc: 8.1.6
 
   # https://pub.dev/packages/flutter_native_splash
-  flutter_native_splash: 2.3.1
+  flutter_native_splash: 2.4.1
 
   # https://pub.dev/packages/floor
-  floor: 1.4.2
+  floor: 1.5.0
 
   # https://pub.dev/packages/google_fonts
-  google_fonts: 5.1.0
+  google_fonts: 6.2.1
 
   # https://pub.dev/packages/image_picker
-  image_picker: 1.0.1
+  image_picker: 1.1.2
 
   # https://pub.dev/packages/intl
-  intl: 0.18.0
+  intl: 0.19.0
 
   # https://pub.dev/packages/logger
-  logger: 2.0.1
+  logger: 2.4.0
 
   # https://pub.dev/packages/path
-  path: 1.8.3
+  path: 1.9.0
 
   # https://pub.dev/packages/path_provider
-  path_provider: 2.0.15
+  path_provider: 2.1.3
 
   # https://pub.dev/packages/share_plus
-  share_plus: 7.1.0
+  share_plus: 9.0.0
 
   # https://pub.dev/packages/shared_preferences
-  shared_preferences: 2.2.0
+  shared_preferences: 2.2.3
 
   # https://pub.dev/packages/sizer
   sizer: 2.0.15
 
   # https://pub.dev/packages/sqflite
-  sqflite: 2.3.0
+  sqflite: 2.3.3+1
 
   # https://pub.dev/packages/timeago
-  timeago: 3.5.0
+  timeago: 3.7.0
 
   # https://pub.dev/packages/video_player
-  video_player: 2.7.0
+  video_player: 2.9.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -104,12 +104,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: 2.0.2
+  flutter_lints: 4.0.0
 
   # https://pub.dev/packages/floor
-  floor_generator: 1.4.2
+  floor_generator: 1.5.0
   # flutter packages pub run build_runner build
-  build_runner: 2.4.6
+  build_runner: 2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
