--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,9 +18,9 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.5.1" apply false
-    id "org.jetbrains.kotlin.android" version "1.9.24" apply false
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.9.24" apply false
+    id "com.android.application" version '8.7.3' apply false
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
+    id "org.jetbrains.kotlin.plugin.serialization" version "2.1.0" apply false
     id "com.google.gms.google-services" version "4.4.2" apply false
     id "com.google.firebase.crashlytics" version "3.0.2" apply false
 }
